# tpRigToolkit-libs-cookiecutter

./: README.md  README.rst  cookiecutter.json  requirements.txt
tpRigToolkit-libs-{{cookiecutter.lib_name}}/: MANIFEST.in  README.rst  requirements.txt  setup.cfg
tpRigToolkit-libs-{{cookiecutter.lib_name}}/docs/sphinx/: conf.py  index.rst
tpRigToolkit-libs-{{cookiecutter.lib_name}}/tests/: test_general.py
tpRigToolkit-libs-{{cookiecutter.lib_name}}/tpRigToolkit/libs/: __init__.py
tpRigToolkit-libs-{{cookiecutter.lib_name}}/tpRigToolkit/libs/{{cookiecutter.lib_name}}/: __init__.py  __logging__.ini  __version__.py  _version.py
tpRigToolkit-libs-{{cookiecutter.lib_name}}/tpRigToolkit/libs/{{cookiecutter.lib_name}}/core/: consts.py  lib.py
