[metadata]
name = tpRigToolkit-libs-{{cookiecutter.lib_name}}
description = {{cookiecutter.lib_description}}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
url = https://github.com/tpRigToolkit/tpRigToolkit-libs-{{cookiecutter.lib_name}}

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpRigToolkit/libs/{{cookiecutter.lib_name}}/_version.py
versionfile_build = tpRigToolkit/libs/{{cookiecutter.lib_name}}/_version.py
tag_prefix = releases/
parentdir_prefix = tpRigToolkit-libs-{{cookiecutter.lib_name}}-releases-